Criada entidade 'Categoria', classes auxiliares e scripts necessários para mapeamento de relações no BD usando o EF

--- a/Alura.Filmes.App/Alura.Filmes.App.csproj
+++ b/Alura.Filmes.App/Alura.Filmes.App.csproj
@@ -126,8 +126,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dados\AluraFilmesContexto.cs" />
+    <Compile Include="Dados\AtorConfiguration.cs" />
+    <Compile Include="Dados\FilmeAtorConfiguration.cs" />
+    <Compile Include="Dados\FilmeConfiguration.cs" />
     <Compile Include="Negocio\Ator.cs" />
     <Compile Include="Extensions\DbContextExtensions.cs" />
+    <Compile Include="Negocio\Filme.cs" />
+    <Compile Include="Negocio\FilmeAtor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
